# n10_edu_drive_ros2

./: CMakeLists.txt  README.md  package.xml
doc/: edu_drive_classdiagram.uxf
doc/legacyInstallationGuides/: Ubuntu22.md  Ubuntu23.md
docker/: Dockerfile  docker-compose.yaml  entrypoint
docker/launch_content/: edu_drive_edu_bot.launch.py
images/simulateEnableLogic/: simulateEnableLogic.cpp  simulateEnableLogic.gp  simulateEnableLogic.txt
launch/: edu_drive.launch.py  edu_drive_edu_bot.launch.py  edu_drive_faulhaber_dc.launch.py  edu_drive_faulhaber_dc_6ch.launch.py  edu_drive_pololu.launch.py
parameter/: edu_drive.yaml  edu_drive_edu_bot.yaml  edu_drive_faulhaber_dc.yaml  edu_drive_faulhaber_dc_6ch.yaml  edu_drive_pololu.yaml
src/: CarrierBoard.cpp  CarrierBoard.h  EduDrive.cpp  EduDrive.h  Matrix.cpp  Matrix.h  MotorController.cpp  MotorController.h  Odometry.cpp  Odometry.h  PowerManagementBoard.cpp  PowerManagementBoard.h  RPiAdapterBoard.cpp  RPiAdapterBoard.h  edu_drive_node.cpp
src/can/: SocketCAN.cpp  SocketCAN.h  canprotocol.h
src/test/: matrix_test.cpp
src/tmp/: test.cpp
